--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,9 @@
 	<target name="test-class" depends="loadProperties" description="Runs the tests of a specific class">
 		<antcall target="highlevel.fu.test-class"/>
 	</target>
+	<target name="javac" depends="loadProperties" description="Compiles the module">
+		<antcall target="highlevel.fu.javac"/>
+	</target>
 	<target name="jar" depends="loadProperties" description="Builds a jar with all its dependencies">
 		<antcall target="highlevel.fu.jar"/>
 	</target>
